--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,25 +3,33 @@
 {% import "bootstrap/wtf.html" as wtf %}
 
 {% block title %}
-Flasky
+    Flasky
 {% endblock %}
 
 {% block content %}
     <div class="container">
         {% for message in get_flashed_messages() %}
-        <div class="alert alert-warning">
-            <button type="button" class="close" data-dismiss="alert" >&times;</button>
-            {{ message }}
-        </div>
+            <div class="alert alert-warning">
+                <button type="button" class="close" data-dismiss="alert" >&times;</button>
+                {{ message }}
+            </div>
+        {% endfor %}
     </div>
 {% endblock %}
 
 {% block page_content %}
     <div class="page-header">
-        <h1>Hello, {% if name %}{{ name }}{% else %}Stranger{% endif %}!</h1>
+        <h1>
+            Hello,
+            {% if current_user.is_authenticated %}
+                {{ current_user.username }}
+            {% else %}
+                Stranger
+            {% endif %}!
+        </h1>
         {% if not known %}
             <p>Pleased to meet you!</p>
-            {% else %}
+        {% else %}
             <p>Happy to see you again!</p>
         {% endif %}
     </div>
